--- a/index2.css
+++ b/index2.css
@@ -149,29 +149,25 @@ body {
     border-radius: 32px 32px 32px 32px;
     border-style: solid;
     color: var(--border);
+    height: 171px;
+    width: 531px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    padding: 0;
-    padding-bottom: 10%;
     position: relative;
     text-align: center;
     top: 2.5%;
-    width: 40%;
-    height: 2.5%;
 }
 #headerContent{
   position: absolute;
   top: 0; bottom: 0; left: 0px; right: 0px;
   width:100%;
-  height:100%;
   display: table;
 }
 #header h2 {
     position:relative;
     padding-left: 20px;
     width:50%;
-    height:100%;
     display: table-cell;
     text-align: left;
 }
@@ -179,7 +175,6 @@ body {
     position:relative;
     padding-right: 20px;
     width:50%;
-    height:100%;
     display: table-cell;
     text-align: right;
 }
