--- a/index2.css
+++ b/index2.css
@@ -26,8 +26,11 @@
     line-height: 1;
     display: inline-block;
     vertical-align: middle;
-    margin: -11px;  /* undo half of the padding from the container to maximize the text area */
+    margin: -23px;  /* undo half of the padding from the container to maximize the text area */
     overflow: hidden;
+}
+.XSmallCircle img {
+  height: 90px;
 }
 
 .SmallCircle {
@@ -73,8 +76,12 @@
     line-height: 1;
     display: inline-block;
     vertical-align: bottom;
-    margin: -32px;  /* undo half of the padding from the container to maximize the text area */
+    margin: -64px;  /* undo half of the padding from the container to maximize the text area */
     overflow: hidden;
+}
+
+.MediumCircle img {
+  height: 252px;
 }
 
 
@@ -111,6 +118,7 @@
 .NodeMetadata {
     display: none;
 }
+
 html, body {
     height: 100%;
 }
@@ -177,10 +185,4 @@ body {
     width:50%;
     display: table-cell;
     text-align: right;
-}
-#node30
-{
-    background-image: url("0.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
