--- a/index2.css
+++ b/index2.css
@@ -21,6 +21,7 @@
     overflow: hidden;
     position: absolute;
     text-align: center;
+    z-index: 1;
 }
 .XSmallCircle p {
     line-height: 1;
@@ -48,6 +49,7 @@
     text-align: center;
     line-height: 60px;
     width: 60px;
+    z-index: 1;
 }
 .SmallCircle p {
     line-height: 1;
@@ -58,7 +60,7 @@
 }
 
 .SmallCircle img {
-  height: 150px;
+  height: 160px;
 }
 .MediumCircle {
     -moz-user-select: none;
@@ -75,6 +77,7 @@
     text-align: center;
     line-height: 124px;
     width: 124px;
+    z-index: 1;
 }
 .MediumCircle p {
     line-height: 1;
@@ -103,6 +106,7 @@
     position: absolute;
     text-align: center;
     width: 252px;
+    z-index: 1;
 }
 .XLargeCircle {
     -moz-user-select: none;
@@ -118,6 +122,7 @@
     position: absolute;
     text-align: center;
     width: 508px;
+    z-index: 1;
 }
 .NodeMetadata {
     display: none;
@@ -128,7 +133,6 @@
   width: 92px;
   text-align: center;
   top: 90px;
-  margin: -23px;
 }
 
 .caption {
